Deleting Imported allembic object crashes blender #66076

Closed
opened 2019-06-24 11:18:53 +02:00 by Royster · 4 comments

System Information
Operating system: Win7
Graphics card: 780ti

Broken:
2.80.74
Worked: (optional)

Import allembic files. Delete animated object - crash. Also crashes when you try and join imported allembic objects.

untitled.abc

**System Information** Operating system: Win7 Graphics card: 780ti Broken: 2.80.74 Worked: (optional) Import allembic files. Delete animated object - crash. Also crashes when you try and join imported allembic objects. [untitled.abc](https://archive.blender.org/developer/F7544230/untitled.abc)
Author

Added subscriber: @Royston

Added subscriber: @Royston
Author

I think I exported it from 2.79A.
I just tried exporting a small allembic from the new version and re-importing it but it crashes also.

newtest.abc

I think I exported it from 2.79A. I just tried exporting a small allembic from the new version and re-importing it but it crashes also. [newtest.abc](https://archive.blender.org/developer/F7544256/newtest.abc)
Brecht Van Lommel self-assigned this 2019-06-24 14:47:13 +02:00

This issue was referenced by 4f97e33e90

This issue was referenced by 4f97e33e906abc827f8b4af0c9b0fba845ef912f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66076
No description provided.