Fix T66076: crash deleting imported Alembic object